refactor: replace `.get(0)` with `.getFirst()` across tests and sources
Improve readability and consistency by using `.getFirst()` for retrieving the first element in collections.